--- a/themesConfig.json
+++ b/themesConfig.json
@@ -127,6 +127,16 @@
                 "attributionUrl":"https://www.openstreetmap.org/copyright"
             },
             {
+                "name":"ICGC",
+                "url":"http://geoserveis.icgc.cat/map/bases/wmts/topo/topo/{TileMatrixSet}/{TileMatrix}/{TileCol}/{TileRow}.jpeg",
+                "title":"Base ortofogràfica",
+                "type":"wmts",
+                "thumbnail":"default.jpg",
+                "projection:":"EPSG:25831",
+                "attribution":"Institut Cartogràfic i Geogràfic de Catalunya",
+                "attributionUrl":"https://www.icgc.cat/es/condiciones"
+            },
+            {
                 "name":"group",
                 "title":"Group",
                 "type":"group",
@@ -162,30 +172,6 @@
                     "LAYERS":"ch.bav.haltestellen-oev",
                     "STYLES":"default"
                 }
-            },
-            {
-                "type":"wmts",
-                "url":"http://geoserveis.icgc.cat/map/bases/wmts/topo/topo/{TileMatrixSet}/{TileMatrix}/{TileCol}/{TileRow}.jpeg",
-                "title":"Capes ortofotografiques",
-                "name":"Capes ortofotografiques",
-                "tileMatrixPrefix":"",
-                "tileMatrixSet":"GoogleMapsCompatible_Level8",
-                "projection:":"EPSG:25831",
-                "resolutions":[
-                    156543.03390625,
-                    78271.516953125,
-                    39135.7584765625,
-                    19567.87923828125,
-                    9783.939619140625,
-                    4891.9698095703125,
-                    2445.9849047851562,
-                    1222.9924523925781
-                ],
-                "tileSize":[
-                    256,
-                    256
-                ],
-                "thumbnail":"default.jpg"
             },
             {
                 "type":"wms",
